logs/rtm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RTM-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rtm'...
Listing './lib/python3.5/site-packages/rtm/data'...
Listing './lib/python3.5/site-packages/rtm/data/smarts'...
Listing './lib/python3.5/site-packages/rtm/data/smarts/Albedo'...
Listing './lib/python3.5/site-packages/rtm/data/smarts/CIE_data'...
Listing './lib/python3.5/site-packages/rtm/data/smarts/Gases'...
Listing './lib/python3.5/site-packages/rtm/data/smarts/Solar'...
Compiling './lib/python3.5/site-packages/rtm/sbdart.py'...
***   File "./lib/python3.5/site-packages/rtm/sbdart.py", line 247
    print "x %s" % param # Unrecognized!
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtm/smarts.py'...
***   File "./lib/python3.5/site-packages/rtm/smarts.py", line 325
    print "x %s" % param # ERROR!
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rtm/tools'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
